--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -5,12 +5,14 @@
     transition: margin-left .28s;
     margin-left: $sideBarWidth;
     position: relative;
+    background-color:#f0f2f5;
   }
 
   .sidebar-container {
     transition: width 0.28s;
     width: $sideBarWidth !important;
-    background-color: $menuBg;
+    // background-color: $menuBg;
+    background:-webkit-linear-gradient(bottom,#3d6df8,#5b8cff);
     height: 100%;
     position: fixed;
     font-size: 0px;
@@ -27,6 +29,7 @@
 
     .scrollbar-wrapper {
       overflow-x: hidden !important;
+      background:url('~@/assets/common/leftnavBg.png') no-repeat 0 100%;
     }
 
     .el-scrollbar__bar.is-vertical {
@@ -66,6 +69,48 @@
       border: none;
       height: 100%;
       width: 100% !important;
+      background-color:transparent!important;
+
+      a {
+        li {
+          background-color:transparent!important;
+          .svg-icon {
+            color: #fff;
+            font-size: 18px;
+            vertical-align: middle;
+            .icon {
+              color: #fff;
+            }
+          }
+     
+          span {
+            color: #fff;
+          }
+     
+          &:hover {
+            .svg-icon {
+              color: #43a7fe;
+            }
+     
+            span {
+              color: #43a7fe;
+            }
+          }
+        }
+      }
+      
+      // 菜单项激活样式
+      .is-active {
+        background-color: $menuText !important;
+    
+        span{
+          color: $menuActiveText !important;
+        }
+    
+        .svg-icon{
+          color: $menuActiveText !important;
+        }
+      }
     }
 
     // menu hover
